# lavish-sample

./: .gitignore  Cargo.toml  Makefile  lavish.toml
src/: badsock.rs  client.rs  facts.rs  main.rs  proto-backup.rs  proto.lavish  proto.rs  server.rs  sleep.rs  support.rs
src/services/: lavish-rules  mod.rs  sample.lavish
src/services/lavish-vendor/: butlerd.lavish  itchio.lavish  ox.lavish
src/services/sample/: mod-backup.rs  mod.rs
