[package]
name = "lavish-sample"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

[dependencies]
netbuf = "0.4.1"
rmp = "0.8.7"
rmp-serde = "0.13.7"
serde = "1.0.92"
lavish = { path = "../lavish-rs" }
lazy_static = "1.3.0"
env_logger = "0.6.1"
pretty-hex = "0.1.0"
